--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,8 @@
 
 {% include seo.html %}
 
+<link rel="shortcut icon" type="image/png" href="{{ base_url }}/favicon.png">
+
 <link href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ base_path }}/feed.xml{% endif %}" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
 
 <!-- http://t.co/dKP3o1e -->
